--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "react-draggable": "^4.4.5",
-    "react-resizable": "^3.0.4"
+    "react-resizable": "^3.0.4",
+    "react-rnd": "^10.4.1"
   }
 }
