--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "react-resizable": "^3.0.4",
     "react-rnd": "^10.4.1",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "typeface-open-sans": "^1.1.13"
   }
 }
